[gd_scene load_steps=4 format=3 uid="uid://bf4s54slelp5k"]

[ext_resource type="Script" path="res://Popper/Orders/Window.gd" id="1_1q04o"]
[ext_resource type="Texture2D" uid="uid://bfa126qw2cd02" path="res://icon.svg" id="2_q4e3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f7bi"]
size = Vector2(51, 50)

[node name="Window" type="Control"]
texture_filter = 1
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.028
offset_right = -1600.0
offset_bottom = -925.2
mouse_filter = 1
script = ExtResource("1_1q04o")

[node name="Counter" type="Panel" parent="."]
layout_mode = 0
offset_top = 120.0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="Customer" type="Area2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Customer"]
position = Vector2(155, 74)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_q4e3x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Customer"]
position = Vector2(155.5, 74)
shape = SubResource("RectangleShape2D_2f7bi")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="input_event" from="Customer" to="." method="_on_customer_input_event"]
[connection signal="mouse_entered" from="Customer" to="." method="_on_customer_mouse_entered"]
[connection signal="mouse_exited" from="Customer" to="." method="_on_customer_mouse_exited"]
